fix(frontend): try to stop logo from jumping

--- a/public/style/wedding.css
+++ b/public/style/wedding.css
@@ -228,7 +228,7 @@ a {
 .wedding-logo {
   display: block;
   width: 70vw;
-  max-height: 50vh; }
+  max-height: 650px; }
 
 .wedding-home-heading {
   font-family: Italianno;
