--- a/src/style/_home.scss
+++ b/src/style/_home.scss
@@ -31,7 +31,7 @@
 .wedding-logo {
   display: block;
   width: 70vw;
-  max-height: 50vh;
+  max-height: 650px;
 }
 
 
